<resources>
    <string name="app_name">CodeForces Event Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="button_schedule">Check for New Events</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_event_notification_settings">Reminders</string>

    <string name="toast_new_event">New CodeForces Event Scheduled:</string>

    <!--Preferences-->
    <string name="pref_category_title_general">General</string>
    <string name="pref_category_title_event_types">Event Types</string>

    <string name="pref_key_calendar">tau.david.codeforceseventscheduler.pref_key_calendar</string>
    <string name="pref_title_calendar">Calendar</string>
    <string name="pref_summary_calendar">Calendar used to store CodeForces events</string>

    <string name="pref_key_div1">tau.david.codeforceseventscheduler.pref_key_div1</string>
    <string name="pref_title_div1">Division 1</string>
    <string name="pref_summary_div1">Schedule division 1 events</string>

    <string name="pref_key_div2">tau.david.codeforceseventscheduler.pref_key_div2</string>
    <string name="pref_title_div2">Division 2</string>
    <string name="pref_summary_div2">Schedule division 2 events</string>

    <string name="pref_key_other">tau.david.codeforceseventscheduler.pref_key_other</string>
    <string name="pref_title_other">Other</string>
    <string name="pref_summary_other">Schedule other events</string>

    <string name="pref_key_reminders">tau.david.codeforceseventscheduler.pref_key_reminders</string>
    <string name="pref_title_reminders">Reminders</string>
    <string name="pref_summary_reminders">Customize event reminders</string>
    <string name="add_new_reminder">Add Reminder</string>

</resources>
